--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-ui-router": "~0.2.15",
     "bootstrap-sass-official": "~3.3.4",
     "angular-bootstrap": "~0.13.0",
+    "angular-messages": "latest",
     "animate.css": "~3.3.0",
     "angular": "~1.4.0",
     "lodash": "latest"
