add drag and drop functionality for tickets

--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "animate.css": "~3.3.0",
     "angular": "~1.4.0",
     "lodash": "latest",
-    "angular-spinner": "latest"
+    "angular-spinner": "latest",
+    "angular-dragdrop": "latest"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
